# screenshot-ai-tg-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  Header.tsx  ImageViewer.tsx  ProcessingStatus.tsx  ScreenshotCard.tsx  ServerConfig.tsx
