[package]
name = "app"
version = "0.1.0"
description = "Screenshot AI Studio"
authors = ["your-name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "dialog-confirm", "global-shortcut-all", "dialog-save", 
    "dialog-open", "dialog-message", "notification-all", 
    "system-tray", "clipboard-all", "shell-open", "path-all", 
    "os-all", "fs-all", "dialog-ask", "http-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Screenshot Server Dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
image = "0.24"
notify = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.4"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.17"
futures = "0.3"
parking_lot = "0.12"
bytes = "1.4"
dirs = "5.0"

# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }

# Desktop Detection
crossbeam-channel = "0.5"

# Network
local-ip-address = "0.5"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
